--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <title>Bigscreen</title>
     <meta name="description" content="Enjoy Your Favorite Media in VR" />
     <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/apple-touch-icon.png"
+    />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <meta property="og:site_name" content="Bigscreen" />
@@ -449,7 +453,7 @@
                   src="/images/logos/oculus_rift_s.svg"
                   alt="oculus rift s" /></a
               ><a
-                href="https://store.steampowered.com/app/457550/Bigscreen_Beta/"
+                href="#"
                 target="blank"
                 class="Platforms_logo__1J6ur"
                 style="height: 18.42%"
@@ -1518,9 +1522,6 @@
         </div>
       </div>
     </div>
-
-    <!-- <script src="js/m.chunk.js"></script>
-    <script src="js/main.chunk.js"></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -1531,5 +1532,6 @@
       integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
       crossorigin="anonymous"
     ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
